@@ -9,6 +9,7 @@
      the "mask" feature resulted in an error.
    - ValueError in settings.py when stored data does not contain a
      key-value pair or when the value is missing.
+   - IndexError when clicking on an event that has no image data
 0.8.8
  - Bugfixes:
    - "Mean of empty slice" error when attempting to plot bad data 
